add online sources

--- a/document/literature.bib
+++ b/document/literature.bib
@@ -53,7 +53,7 @@
   doi       = {10.1109/ICIN.2017.7899247}
 }
 
-  @article{Bentaleb_Belloum_Sebaa_El-Maouhab_2021,
+@article{Bentaleb_Belloum_Sebaa_El-Maouhab_2021,
   title   = {Containerization technologies: Taxonomies, applications and challenges},
   volume  = {78},
   doi     = {10.1007/s11227-021-03914-1},
@@ -61,7 +61,6 @@
   journal = {The Journal of Supercomputing},
   author  = {Bentaleb, Ouafa and Belloum, Adam S. and Sebaa, Abderrazak and El-Maouhab, Aouaouche},
   year    = {2021},
-  month   = {Jun},
   pages   = {1144–1181}
 } 
 
@@ -114,5 +113,18 @@ doi="10.1007/978-1-4842-4470-8_45",
   doi={10.1109/WSC60868.2023.10408202}
 }
 
+@book{Leonelli2021,
+  author       = {Leonelli, Manuele},
+  howpublished = {electronic; online},
+  title        = {Simulation and Modelling to Understand Change},
+  type         = {book},
+  year         = {2021},
+}
 
-
+@online{Gartner,
+  author = {Elliott, Timo},
+  title = {Digital Business and Business Analytics. GartnerBI: Analytics Moves To The Core},
+  year = 2013,
+  url = {https://timoelliott.com/blog/2013/02/gartnerbi-emea-2013-part-1-analytics-moves-to-the-core.html},
+  urldate = {2024-12-01}
+}
