--- a/document/literature.bib
+++ b/document/literature.bib
@@ -73,44 +73,44 @@
   publisher    = {Rheinwerk Verlag},
   title        = {Docker: Das Praxisbuch für Entwickler und DevOps-Teams},
   type         = {book},
-  year         = {2021},
+  year         = {2021}
 }
 
-@Inbook{Bisong2019,
-author="Bisong, Ekaba",
-title="Containers and Google Kubernetes Engine",
-bookTitle="Building Machine Learning and Deep Learning Models on Google Cloud Platform: A Comprehensive Guide for Beginners",
-year="2019",
-publisher="Apress",
-address="Berkeley, CA",
-pages="655--670",
-isbn="978-1-4842-4470-8",
-doi="10.1007/978-1-4842-4470-8_45",
+@inbook{Bisong2019,
+  author    = {Bisong, Ekaba},
+  title     = {Containers and Google Kubernetes Engine},
+  booktitle = {Building Machine Learning and Deep Learning Models on Google Cloud Platform: A Comprehensive Guide for Beginners},
+  year      = {2019},
+  publisher = {Apress},
+  address   = {Berkeley, CA},
+  pages     = {655--670},
+  isbn      = {978-1-4842-4470-8},
+  doi       = {10.1007/978-1-4842-4470-8_45}
 }
 
-@INPROCEEDINGS{10408594,
-  author={Wuttke, Alexander and Hunker, Joachim and Rabe, Markus and Diepenbrock, Jan-Philipp},
-  booktitle={2023 Winter Simulation Conference (WSC)}, 
-  title={Estimating Parameters with Data Farming for Condition-Based Maintenance in a Digital Twin}, 
-  year={2023},
-  volume={},
-  number={},
-  pages={1641-1652},
-  keywords={Parameter estimation;Maintenance engineering;Generators;Data models;Digital twins;Sensors;Farming},
-  doi={10.1109/WSC60868.2023.10408594}
+@inproceedings{10408594,
+  author    = {Wuttke, Alexander and Hunker, Joachim and Rabe, Markus and Diepenbrock, Jan-Philipp},
+  booktitle = {2023 Winter Simulation Conference (WSC)},
+  title     = {Estimating Parameters with Data Farming for Condition-Based Maintenance in a Digital Twin},
+  year      = {2023},
+  volume    = {},
+  number    = {},
+  pages     = {1641-1652},
+  keywords  = {Parameter estimation;Maintenance engineering;Generators;Data models;Digital twins;Sensors;Farming},
+  doi       = {10.1109/WSC60868.2023.10408594}
 }
 
 
-@INPROCEEDINGS{10408202,
-  author={Pappert, Falk Stefan and Seufferth, Daniel and Stein, Heiderose and Rose, Oliver},
-  booktitle={2023 Winter Simulation Conference (WSC)}, 
-  title={Using Kubernetes to Improve Data Farming Capabilities}, 
-  year={2023},
-  volume={},
-  number={},
-  pages={2052-2063},
-  keywords={Containers;Farming},
-  doi={10.1109/WSC60868.2023.10408202}
+@inproceedings{10408202,
+  author    = {Pappert, Falk Stefan and Seufferth, Daniel and Stein, Heiderose and Rose, Oliver},
+  booktitle = {2023 Winter Simulation Conference (WSC)},
+  title     = {Using Kubernetes to Improve Data Farming Capabilities},
+  year      = {2023},
+  volume    = {},
+  number    = {},
+  pages     = {2052-2063},
+  keywords  = {Containers;Farming},
+  doi       = {10.1109/WSC60868.2023.10408202}
 }
 
 @book{Leonelli2021,
@@ -118,13 +118,79 @@ doi="10.1007/978-1-4842-4470-8_45",
   howpublished = {electronic; online},
   title        = {Simulation and Modelling to Understand Change},
   type         = {book},
-  year         = {2021},
+  year         = {2021}
 }
 
 @online{Gartner,
-  author = {Elliott, Timo},
-  title = {Digital Business and Business Analytics. GartnerBI: Analytics Moves To The Core},
-  year = 2013,
-  url = {https://timoelliott.com/blog/2013/02/gartnerbi-emea-2013-part-1-analytics-moves-to-the-core.html},
+  author  = {Elliott, Timo},
+  title   = {Digital Business and Business Analytics. GartnerBI: Analytics Moves To The Core},
+  year    = 2013,
+  url     = {https://timoelliott.com/blog/2013/02/gartnerbi-emea-2013-part-1-analytics-moves-to-the-core.html},
   urldate = {2024-12-01}
 }
+
+@software{Ramirez_FastAPI,
+  author  = {Ramírez, Sebastián},
+  license = {MIT},
+  title   = {{FastAPI}},
+  url     = {https://github.com/fastapi/fastapi}
+}
+
+@software{Meyer_bachelorseminar,
+  author = {Meyer, Patrick},
+  title  = {{bachelorseminar}},
+  url    = {https://github.com/patrick-meyer-1992/bachelorseminar}
+}
+
+@inproceedings{python-mesa-2020,
+  author    = {Kazil, Jackie
+               and Masad, David
+               and Crooks, Andrew},
+  editor    = {Thomson, Robert
+               and Bisgin, Halil
+               and Dancy, Christopher
+               and Hyder, Ayaz
+               and Hussain, Muhammad},
+  title     = {Utilizing Python for Agent-Based Modeling: The Mesa Framework},
+  booktitle = {Social, Cultural, and Behavioral Modeling},
+  year      = {2020},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {308--317},
+  abstract  = {Mesa is an agent-based modeling framework written in Python. Originally started in 2013, it was created to be the go-to tool in for researchers wishing to build agent-based models with Python. Within this paper we present Mesa's design goals, along with its underlying architecture. This includes its core components: 1) the model (Model, Agent, Schedule, and Space), 2) analysis (Data Collector and Batch Runner) and the visualization (Visualization Server and Visualization Browser Page). We then discuss how agent-based models can be created in Mesa. This is followed by a discussion of applications and extensions by other researchers to demonstrate how Mesa design is decoupled and extensible and thus creating the opportunity for a larger decentralized ecosystem of packages that people can share and reuse for their own needs. Finally, the paper concludes with a summary and discussion of future development areas for Mesa.},
+  isbn      = {978-3-030-61255-9}
+}
+
+@article{jain2014angularjs,
+  title   = {AngularJS: A modern MVC framework in JavaScript},
+  author  = {Jain, Nilesh and Bhansali, Ashok and Mehta, Deepak},
+  journal = {Journal of Global Research in Computer Science},
+  volume  = {5},
+  number  = {12},
+  pages   = {17--23},
+  year    = {2014}
+} 
+
+@online{RabbitMQ,
+  author  = {Broadcom Inc.},
+  title   = {RabbitMQ},
+  year    = 2024,
+  url     = {https://www.rabbitmq.com/},
+  urldate = {2024-12-03}
+}
+
+@book{Isermann_2011,
+  place     = {Berlin},
+  title     = {Fault-diagnosis applications: Model-based condition monitoring: Actuators, drives, machinery, plants, sensors, and fault-tolerant systems},
+  publisher = {Springer},
+  author    = {Isermann, Rolf},
+  year      = {2011}
+} 
+
+@book{Bradshaw_2010,
+  title     = {MongoDB: The Definitive Guide, 1st Edition},
+  publisher = {O'Reilly Media, Inc},
+  author    = {Bradshaw, Shannon and Brazil, Eoin and Chodorow, Kristina},
+  year      = {2010},
+  isbn      = {978-1-449-38156-1}
+} 
