--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -15,10 +15,40 @@
 \usepackage{amsthm}
 \usepackage{biblatex}
 \usepackage{listings}
+\usepackage{xcolor}
 \lstset{basicstyle=\ttfamily}
 \addbibresource{literature.bib}
 
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+
+\lstset{style=mystyle}
+
 \begin{document}
+
+\lstinputlisting[language=Python]{../kubernetes/db/db-deployment.yaml}
 
 \section{Deckblatt}
 \section{Inhaltsverzeichnis}
@@ -309,6 +339,30 @@ Eine ausführlichere Erläuterung und Beispiele der in diesem Kapitel aufgeführ
 kann bei Schmeling und Dargatz \cite{Schmeling_Dargatz_2022} gefunden werden.
 
 \subsection{Namespaces}
+Namespaces (dt. Namensräume) bietet eine ordnende Funktion innerhalb eines Kubernetes Clusters.
+Bis auf wenige Ausnahmen (z.B. PersistentVolumes) sind die meisten Ressourcen in Kubernetes einem 
+Namespace zugeordnet. Wird dieser nicht explizit ausgewählt, werden Ressourcen automatisch dem 
+Namespace \emph{default} zugeordnet.
+
+Namespaces bieten mehrere Vorteile. Zum einen können Namen für Ressourcen doppelt vergeben werden,
+solange sie sich in unterschiedlichen Namespaces befinden. Sie können trotzdem weiterhin
+über ihren Fully-Qualified-Domain-Name (FQDN) innerhalb des Clusters angesprochen werden.
+Dazu betreibt Kubernetes intern einen eigenes Domain-Name-System (DNS), das die Namen
+der vorhandenen Services zur Addressierung verwendet.
+Beispielsweise könnte es zwei Services mit der Bezeichnung \emph{webserver} geben.
+Einmal im Namespace \emph{default} und einmal im Namespace \emph{dev}. 
+Ersterer wäre dann innerhalb des Clusters über den FQDN\linebreak http://webserver.\emph{default}.svc.cluster.local/
+erreichbar, während für letzteren http://webserver.\emph{dev}.svc.cluster.local/ zutreffen würde.
+
+Zum anderen können mithilfe von Namespaces verschiedene Entwicklungsstadien getrennt werden.
+So könnte in einem Namespace \emph{dev} eine ConfigMap Ressource bereitgestellt,
+die Umgebungsvariablen für andere Ressourcen definiert, die spezifisch für diese 
+Entwicklungsumgebung sind. Ein anderer Namespace \emph{prod} könnte analog zu \emph{dev}
+aufgebaut sein, mit dem Unterschied, dass hier eine andere ConfigMap Ressource vorliegt.
+
+So können Entwicklungs- und Produktivumgebung ohne großen Aufwand mit minimalen Unterschieden betrieben
+werden, was dazu beitragen kann, die Entwicklung und Bereitstellung von Anwendung zu beschleunigen.
+\cite{Schmeling_Dargatz_2022}
 % TODO: Abschnitt ergänzen. Wichtig um klarzustellen, wie Pods über internes Netzwerk kommunizieren
 
 % Einführung in praktisches Beispiel, aber 
